# recog-doodles

./: README.md  Recognizing Doodles with PyTorch.ipynb  recog_doodles_pytorch.ipynb
client/recog-doodles-app/: index.html  package-lock.json  package.json
client/recog-doodles-app/src/: App.tsx  onnxModelHelper.js
client/recog-doodles-client/: package-lock.json  package.json
client/recog-doodles-client/public/: index.html
client/recog-doodles-client/src/: App.js  index.css  onnxModelHelper.js
client/server/: README.md  main.py  pyproject.toml
