[project]
name = "server"
version = "0.1.0"
description = "Recognizing Handdrawn Doodles"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "quickdraw>=1.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
